# SME

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/SME/: Sme.h
core/include/SME/scene/: Scene.h  sceneManager.h
core/include/SME/sprite/: Sprite.h
core/include/SME/text/: text.h
core/include/SME/window/: Application.h  Renderer.h
core/include/sme/: SharedObjectClass.h  Sme.h
core/include/sme/events/: GameEvents.h  WindowEvents.h
core/include/sme/log/: logging.h
core/include/sme/scene/: Scene.h  SceneManager.h
core/include/sme/sprite/: Sprite.h
core/include/sme/text/: Text.h
core/include/sme/window/: Application.h  Renderer.h
core/src/SME/events/: GameEvents.cpp
core/src/SME/scene/: Scene.cpp  sceneManager.cpp
core/src/SME/sprite/: Collision.cpp  Sprite.cpp  Transforms.cpp
core/src/SME/text/: text.cpp
core/src/SME/window/: Application.cpp  Renderer.cpp
core/src/sme/events/: GameEvents.cpp  WindowEvents.cpp
core/src/sme/scene/: Scene.cpp  SceneManager.cpp  sceneManager.cpp
core/src/sme/sprite/: Collision.cpp  Sprite.cpp  Transforms.cpp
core/src/sme/text/: Text.cpp  Transforms.cpp  text.cpp
core/src/sme/window/: Application.cpp  Renderer.cpp
main/: CMakeLists.txt  Main.cpp  main.cpp
main/assets/font/: README.md
main/assets/textures/: README.md
main/include/: mainScript.h
main/runtime/: Runtime.cpp  Runtime.h  runtime.cpp  runtime.h
main/src/: MainScript.cpp  mainScript.cpp
