# Setup project
cmake_minimum_required(VERSION 3.14)
project(setup)
set(CMAKE_CXX_STANDARD 17)

# Set the binary exe file to a bin folder inside of the build folder
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin)

# Add subdirectories
add_subdirectory(main)
add_subdirectory(core)